[package]
name = "rust_codebase"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_codebase"
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
futures = "0.3"
idevice = { path = "../../lib/idevice-rs/idevice", features = ["usbmuxd"] }
