[package]
name = "idescriptor_rust_codebase"
version = "0.1.0"
edition = "2024"

[lib]
name = "idescriptor_rust_codebase"
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3"
idevice = { path = "../../lib/idevice-rs/idevice", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
cxx = "1.0.95"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
plist = "1.8.0"
plist-macro = "0.1.6"
tracing = "0.1.44"
once_cell = "1.21.4"
regex = "1.12.3"
urlencoding = "2.1.3"
serde_json = "1.0.149"
rusqlite = "0.39.0"


[build-dependencies]
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
